compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__bitwise_const_ops-24.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 0 xor -1

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_state: [
                Value(Integer(ConstInt { magnitude: 4294967295, sign: Positive, width: As32 })),
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
