compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__bitwise_const_ops-28.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: not -1

---
"_"@(FileId(1), 6..7) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })


